tests/ui/errors/snapshots/infer_reserved_import_alias_prelude.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Reserved import alias
   ╭─[test.lis:2:8]
 1 │ 
 2 │ import Option "go:fmt"
   ·        ───┬──
   ·           ╰── reserved name
 3 │ 
   ╰────
  help: `Option` is a reserved name and cannot be used as an import alias. Choose a different alias, e.g. `import my_Option "..."` · code: [resolve.reserved_import_alias]
