tests/ui/errors/snapshots/infer_result_does_not_implement_interface.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Interface not implemented
    ╭─[test.lis:9:11]
  8 │   let c = Ctx {}
  9 │   c.fatal(c.run())
    ·           ───┬───
    ·              ╰── `Result<(), error>` does not implement `error`
 10 │ }
    ╰────
  help: Unwrap the `Result` with `match` or `if let` first · code: [infer.interface_not_implemented]
