tests/ui/errors/snapshots/infer_result_with_concrete_error_where_error_interface_expected.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Type mismatch
    ╭─[test.lis:12:8]
 11 │   let outcome: Result<int, FooError> = Ok(1)
 12 │   take(outcome)
    ·        ───┬───
    ·           ╰── expected `Result<int, error>`, found `Result<int, FooError>`
 13 │ }
    ╰────
  help: Use `.map_err(|value| value as error)` to widen the error · code: [infer.type_mismatch]
