tests/ui/errors/snapshots/infer_return_in_defer_block.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ `return` in `defer` block
   ╭─[test.lis:4:5]
 3 │   defer {
 4 │     return 42;
   ·     ────┬────
   ·         ╰── not allowed inside `defer` block
 5 │   };
   ╰────
  help: Remove the `return` as it only exits the `defer` block · code: [infer.return_in_defer_block]
