tests/ui/errors/snapshots/infer_select_match_empty_arms.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid select match
   ╭─[test.lis:5:11]
 4 │   select {
 5 │     match ch.receive() {},
   ·           ──────┬─────
   ·                 ╰── missing `Some` arm
 6 │     _ => println("timeout"),
   ╰────
  help: `None` only handles channel close. Add a `Some(v) => ...` arm to handle received values · code: [infer.select_match_missing_some_arm]
