tests/ui/errors/snapshots/infer_select_match_invalid_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid select match
   ╭─[test.lis:8:7]
 7 │       None => 0,
 8 │       _ => 1,
   ·       ┬
   ·       ╰── unsupported pattern
 9 │     },
   ╰────
  help: Select match arms support only `Some(...)` and `None` patterns · code: [infer.select_match_invalid_pattern]
